# bearobot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
db/: bearobot.sqlite  bearodata.sqlite
migrations/: 20250918215437_create_song_suggestions.sql  20250919002153_create_game_suggestions.sql
src/: bot.rs  config.rs  database.rs  error.rs  main.rs
src/commands/: admin.rs  games.rs  mod.rs  music.rs
